# systemd

./: meson.build  meson_options.txt
.flox/: env.json
.flox/env/: manifest.toml
src/portable-mgr/: calendarspec.c  calendarspec.h  event.c  event.h  ipc.c  ipc.h  journal.c  journal.h  journalctl.c  manager.c  manager.h  meson.build  parse-unit.c  parse-unit.h  portabled.c  psm-calendarspec-compat.h  psm-util.c  psm.h  systemctl.c
